# s-terra-test-task

./: .gitignore  CMakeLists.txt  README.md  README.md.backup
src/: binary.c  binary.h  list_node.c  list_node.h  main.c  random.c  random.h  typedefs.h
